<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <!--ToolBar-->
    <RelativeLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/view_selector">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/shopping_cart"
            android:textColor="#555555"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/edit"
            android:textColor="#666"
            android:textSize="16sp" />
    </RelativeLayout>

    <!--非空购物车-->
    <RelativeLayout
        android:id="@+id/layout_shopping_cart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <cc.ibooker.zshoppingcart.view.AutoSwipeRefreshLayout
            android:id="@+id/swipe_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </cc.ibooker.zshoppingcart.view.AutoSwipeRefreshLayout>

        <!--底部结算-->
        <RelativeLayout
            android:id="@+id/layout_bottom"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/view_selector"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cb_check_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/bg_checkbox_one"
                    android:checked="false"
                    android:paddingBottom="5dp"
                    android:paddingEnd="5dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="5dp"
                    android:paddingStart="8dp"
                    android:paddingTop="5dp"
                    android:text="@string/check_all"
                    android:textColor="#9fa0a0" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingEnd="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingStart="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="22dp"
                        android:gravity="center"
                        android:text="@string/total"
                        android:textColor="#555555"
                        android:textSize="12sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_total"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@color/colorTitle"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/total_one"
                            android:textColor="#555555"
                            android:textSize="12sp" />
                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/btn_settlement"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/colorTitle"
                    android:text="@string/settlement"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />
            </LinearLayout>

        </RelativeLayout>

        <!--底部删除-->
        <RelativeLayout
            android:id="@+id/layout_bottom_del"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/view_selector"
            android:gravity="center_vertical"
            android:visibility="gone">

            <CheckBox
                android:id="@+id/cb_check_all_del"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:button="@drawable/bg_checkbox_one"
                android:checked="false"
                android:gravity="center_vertical"
                android:paddingBottom="5dp"
                android:paddingEnd="5dp"
                android:paddingLeft="8dp"
                android:paddingRight="5dp"
                android:paddingStart="8dp"
                android:paddingTop="5dp"
                android:text="@string/check_all"
                android:textColor="#9fa0a0" />

            <Button
                android:id="@+id/btn_del"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@color/colorTitle"
                android:text="@string/delete"
                android:textColor="#ffffff"
                android:textSize="16sp" />

        </RelativeLayout>

    </RelativeLayout>
</LinearLayout>
